# voidgrid

./: .gitignore  Cargo.toml  README.md  REFACTORING_GLYPHSET.md  ROADMAP.md  VTP_SPEC.md  crtdemo.vpk  global_registry.rs  vtp_test.py
assets/: cga.json  chromatic.fs  crt.json  huge.json  manifest.json  megafont.json  meta_example.json  microfont.json
crates/voidgrid-core/: Cargo.toml
crates/voidgrid-core/src/: asset_manager.rs  assets.rs  atlas.rs  buffer.rs  buffer_manager.rs  events.rs  global_registry.rs  glyphset.rs  grids.rs  hierarchy.rs  input.rs  lib.rs  pack_loader.rs  palette.rs  renderer.rs  resource_pack.rs  scripting.rs  shader.rs  terminal.rs  text_ops.rs  types.rs  ui.rs  vfx.rs  virtual_tree.rs
crates/voidgrid-core/src/shaders/: mask.fs
crates/voidgrid-resource-packs/: Cargo.toml
crates/voidgrid-resource-packs/src/: providers.rs
crates/voidgrid-vtp/: Cargo.toml
crates/voidgrid-vtp/src/: lib.rs
crates/vtp-protocol/: Cargo.toml
crates/vtp-protocol/src/: lib.rs
res/: manifest.json  manifest.toml
res/assets/: c64.json  c64.toml  crt.json  crt.toml  demo.rhai  gameboy.toml  glow.fs  plexmono32x64.json  plexmono32x64.toml  scanline.fs  tx02.toml  tx02_bold.json  tx02_bold.toml  tx02_regular.json  tx02_regular.toml  tx02_thin.json  tx02_thin.toml  ui.rhai  vfx_bloom.fs
res/assets/palettes/: gameboy.toml  myownsummer.toml
src/: asset_manager.rs  assets.rs  atlas.rs  buffer.rs  glyphset.rs  grids.rs  hierarchy.rs  input.rs  lib.rs  main.rs  palette.rs  renderer.rs  resource_pack.rs  text_ops.rs  types.rs  vtp.rs
