[workspace]
resolver = "2"
members = [
    "crates/vtp-protocol",
    "crates/voidgrid-core",
    "crates/voidgrid-resource-packs",
    "bin/voidgrid-demo"
]

[workspace.dependencies]
raylib = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
slotmap = "1.0"
rand = "0.9.2"
puffin = "0.19.1"
puffin_http = "0.16.1"
zip = "2.4.2"
