[package]
name = "voidgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
raylib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
slotmap = { workspace = true }
voidgrid-vtp = { path = "../voidgrid-vtp" }


rhai = "1.19"


chrono = "0.4"

